force-app/main/default/objects/sugati__Transfer_Option__c/sugati__Transfer_Option__c.object-meta.xml
<CustomObject>
    <description>Transfer and Car Hire Options</description>
    <label>Transfer Option</label>
    <nameField>
        <label>Transfer Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>