force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__S_TO_Time_allowed_for_transfer__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_TO_Time_allowed_for_transfer__c</fullName>
    <label>Time allowed for transfer (in minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>