force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_Airport__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipLabel>Transfer Options</relationshipLabel>
    <relationshipName>Transfer_Options</relationshipName>
    <type>Lookup</type>
</CustomField>