force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_City_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_City_Code__c</fullName>
    <label>City Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>