force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>