force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_From__c</fullName>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>