force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_Place_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_Place_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(sugati__TO_Airport__c)), 
    sugati__TO_Airport__r.Name,
        IF(NOT(ISBLANK(sugati__TO_Where_to_go__c)), 
            sugati__TO_Where_to_go__r.Name, 
               IF(NOT(ISBLANK(sugati__TO_Supplier__c)), 
        sugati__TO_Supplier__r.Name, 
            &apos;&apos;
        )
    )
)</formula>
    <label>Place Name</label>
    <type>Text</type>
</CustomField>