force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Transfer Options</relationshipLabel>
    <relationshipName>Transfer_Options</relationshipName>
    <type>Lookup</type>
</CustomField>