force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_What_to_do__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_What_to_do__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>What to do</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Transfer Options</relationshipLabel>
    <relationshipName>Transfer_Options</relationshipName>
    <type>Lookup</type>
</CustomField>