force-app/main/default/objects/sugati__Transfer_Option__c/fields/sugati__TO_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__TO_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Transfer Options</relationshipLabel>
    <relationshipName>Transfer_Options</relationshipName>
    <type>Lookup</type>
</CustomField>