force-app/main/default/objects/sugati__Transfer_Option__c/recordTypes/sugati__Car_Hire.recordType-meta.xml
<RecordType>
    <fullName>sugati__Car_Hire</fullName>
    <active>true</active>
    <label>Car Hire</label>
</RecordType>